fix: overflow course page

--- a/src/app/(main)/courses/[id]/course-page.module.css
+++ b/src/app/(main)/courses/[id]/course-page.module.css
@@ -13,6 +13,7 @@
   padding: 36px;
   min-height: 400px;
   max-height: 700px;
+  overflow: auto;
   display: flex;
 }
 
